# dorestic

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml
src/dorestic/: __init__.py  __main__.py  api.py  backup.py  cli.py  config.py  config.yml.example  display.py  docker.py  models.py  paths.py  restic.py
tests/: conftest.py  test_backup.py  test_docker.py  test_unit.py
