[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dorestic"
version = "2.0.0"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.0,<8.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
dorestic = "dorestic.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dorestic = ["config.yml.example"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "docker: tests that require a running Docker daemon",
    "restic: tests that require restic to be installed",
]
