[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dorestic"
version = "0.5.0"
description = "A label-driven backup system for Docker containers using restic"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "Eddie Cornejo" },
]
readme = "README.md"
keywords = ["backup", "docker", "restic", "containers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Archiving :: Backup",
]
dependencies = [
    "docker>=7.0,<8.0",
    "pyyaml>=6.0,<7.0",
]

[project.urls]
Homepage = "https://github.com/cornejo/dorestic"
Repository = "https://github.com/cornejo/dorestic"
Issues = "https://github.com/cornejo/dorestic/issues"
Changelog = "https://github.com/cornejo/dorestic/blob/main/CHANGELOG.md"
Funding = "https://ko-fi.com/rdacted"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
dorestic = "dorestic.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dorestic = ["config.yml.example"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "docker: tests that require a running Docker daemon",
    "restic: tests that require restic to be installed",
]
